# health-care-project

./: .gitignore  MAKEFILE  README.md  analysis.py  full_pipeline.py  generate_data.py  kmeans.py  oracle.py  pyproject.toml  requirement.txt
config/: general.yaml
config/persona_params/: featurized_data_sample.csv  final_summary_analysis_for_event_data_cache_sessions_distinct_lambda_10.csv_viz_tsne.csv  final_summary_analysis_for_event_data_cache_sessions_distinct_lambda_3.csv_viz_tsne.csv  final_summary_analysis_for_event_data_cache_sessions_distinct_lambda_35.csv_viz_tsne.csv  final_summary_k10_analysis_for_event_data_cache_sessions_distinct_lambda_10.csv.csv  final_summary_k15_analysis_for_event_data_cache_sessions_distinct_lambda_10.csv.csv  final_summary_k20_analysis_for_event_data_cache_sessions_distinct_lambda_10.csv.csv  final_summary_k25_analysis_for_event_data_cache_sessions_distinct_lambda_10.csv.csv  final_summary_k5_analysis_for_event_data_cache_sessions_distinct_lambda_10.csv.csv  generation_summary.json  persona_Compulsive_Checker.json  persona_Night_Owl.json
config/types/: persona_9-to-5er.json  persona_Compulsive_Checker.json  persona_Influencer.json  persona_Night_Owl.json  persona_choose_and_stuck_user.json  persona_cycle_user.json  (+3 more)
main/: dynamic.py  main.py  markov.py
persona_params/: persona_9-to-5er.json  persona_Compulsive_Checker.json  persona_Influencer.json  persona_Night_Owl.json
reports/: generation_summary.json
src/: analysis.py  create_theoretical_vis.py  generate_data.py  js.py  kmeans.py
tests/: test_analysis.py  test_data.py
(+7 files in other folders)
